# CodexPlusPlus

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  YHYQ.md  pyproject.toml  计划.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pr-build.yml  release-assets.yml
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  i18n-en.ts  model-windows.test.ts  (+2 more)
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
assets/: codex-models.json  gpt56-model-metadata-compat.json
assets/inject/: renderer-inject.js
codex_session_delete/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: app_paths.rs  bridge.rs  ccs_import.rs  codex_app_state.rs  codex_auto_update.rs  codex_config_reload.rs  codex_hooks.rs  config_backup.rs  launcher.rs  lib.rs  model_catalog.rs  model_suffix.rs  official_remote.rs  plugin_marketplace.rs  ports.rs  protocol_proxy.rs  provider_import.rs  proxy.rs  relay_config.rs  relay_switch.rs  routes.rs  settings.rs  update.rs  vision.rs
crates/codex-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  codex_app_state.rs  codex_auto_update.rs  force_chinese_locale_settings.rs  launcher.rs  model_catalog.rs  model_suffix.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  updater.rs
docs/plans/: 三阶段计划.md
docs/research/: 01-调研结果.md
docs/specs/: 2026-06-23-model-catalog-prototype-design.md
tests/: test_renderer_script.py
tools/: check-local-branding.mjs
(+6 files in other folders)
