[package]
name = "codex-plus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
base64.workspace = true
directories.workspace = true
futures-util = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Com",
  "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile.workspace = true
